# ExcelVisualTool

./: .gitignore  README.md  TODO.md  build.bat  idea.md  index.html  package-lock.json  package.json  test.bat
rfp/: PLAN.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
test-data/: big5-sales-sample.csv  chinese-sales-sample.xls  chinese-sales-sample.xlsx  csv-sales-sample.csv  mixed-missing-sample.xlsx  multi-sheet-sample.xlsx  sales-sample.xlsx  uat-500-rows.xlsx
